# NetCalc

./: CMakeLists.txt  README.md  build.sh  formatting.cmake  lintfix.sh
0_Common/: CMakeLists.txt
0_Common/include/: calc_handle.h  calc_handle_thirty_two.h  comparisons.h  debug.h  file_io.h  math_funcs.h  math_funcs_thirty_two.h
0_Common/src/: calc_handle.c  calc_handle_thirty_two.c  comparisons.c  debug.c  file_io.c  math_funcs.c  math_funcs_thirty_two.c
1_SimpleCalc/: CMakeLists.txt
1_SimpleCalc/include/: cli_handle.h  simple_main.h
1_SimpleCalc/src/: cli_handle.c  simple_main.c
4_ThreadCalc/: CMakeLists.txt  README.md
4_ThreadCalc/include/: queue.h  signals.h  thread_handle.h  thread_main.h  threadpool.h
4_ThreadCalc/src/: queue.c  signals.c  thread_handle.c  thread_main.c  threadpool.c
4_ThreadCalc/tests_include/: signal_tests.h  thread_tests.h
4_ThreadCalc/tests_src/: signal_tests.c  tests.cmake  thread_tests.c
5_NetCalc/: CMakeLists.txt
5_NetCalc/client/: client.py  constants.py  net_client.py
5_NetCalc/include/: net_converts.h  net_handler.h  net_main.h
5_NetCalc/src/: net_converts.c  net_handler.c  net_main.c
calculator-project-netcalc-Tests/Tests/: EquGrader.py  NetCalcTests.py  SimpleCalc.tests  ThreadCalcTests.py
